--- a/client/app.html
+++ b/client/app.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Bangalore Home Price Prediction</title>
-        <link rel="icon" href="building.png" type="image/x-icon" />
+        <link rel="icon" href="./building.png" type="image/x-icon" />
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="app.js"></script>
-        <link rel="stylesheet" href="app.css">
+        <script src="./app.js"></script>
+        <link rel="stylesheet" href="./app.css">
     </head>
     <body>
         <h2 class="title">Bangalore Home Price Prediction</h2>
